--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-get.address = https://word-learning.herokuapp.com/api/all
-post.address = https://word-learning.herokuapp.com/api/add
+get.address=${GET_ADDRESS}
+post.address=${POST_ADDRESS}
+
+vaadin.productionMode=true
+vaadin.compatibilityMode=true
